--- a/app/src/main/res/layout/pupup_check_file_availability.xml
+++ b/app/src/main/res/layout/pupup_check_file_availability.xml
@@ -16,7 +16,7 @@
             android:layout_height="60dp"
             android:layout_centerInParent="true"
             android:textAlignment="center"
-            android:text="Are you sure for data backup?"
+            android:text="Check File availability"
             android:fontFamily="@font/my_custom_font"
             android:textColor="@color/offwhite"
             android:textSize="25dp"
@@ -53,7 +53,7 @@
                     android:layout_height="match_parent"
                     android:enabled="true"
                     android:singleLine="false"
-                    android:text="Please make sure all your collected data synced successfully to server before data back up.Once you click backup your data will be deleted from your mobile and stored in a backup folder which cannot be used for synchronization."
+                    android:text="1.Clear all the exsisting files available in File->SurveyMobile.Droid->Download and Export folders.If you have synced all the previous data then please clean it by deleteing the files."
                     android:fontFamily="@font/my_custom_font"
                     android:textAlignment="gravity"
                     android:textColor="@color/color1"
