--- a/app/src/main/res/layout/activity_select_fbfor_dgps.xml
+++ b/app/src/main/res/layout/activity_select_fbfor_dgps.xml
@@ -105,6 +105,22 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+
+
+            <Button
+                android:id="@+id/download"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/fb"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10sp"
+                android:layout_weight="1"
+                android:background="@drawable/button_drawable"
+                android:text="Download CMV"
+                android:textColor="@color/white"
+                android:fontFamily="@font/my_custom_font"
+                android:textSize="14dp" />
+
             <Button
                 android:id="@+id/submit"
                 android:layout_width="50dp"
@@ -116,21 +132,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/button_drawable"
                 android:text="Next"
-                android:textColor="@color/white"
-                android:fontFamily="@font/my_custom_font"
-                android:textSize="14dp" />
-
-            <Button
-                android:id="@+id/reset"
-
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_below="@+id/fb"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginRight="15sp"
-                android:layout_weight="1"
-                android:background="@drawable/button_drawable"
-                android:text="Reset"
                 android:textColor="@color/white"
                 android:fontFamily="@font/my_custom_font"
                 android:textSize="14dp" />
