--- a/app/src/main/res/layout/activity_middle_map_list.xml
+++ b/app/src/main/res/layout/activity_middle_map_list.xml
@@ -94,7 +94,7 @@
 
 
             <ImageView
-                android:id="@+id/sync"
+                android:id="@+id/export"
                 android:layout_width="0dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
